--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bosco",
+  "name": "هو - هي💕أنوجا",
   "description": "Bosco is a whatsapp bot made by @pepe sir with baileys",
   "repository": "https://github.com/AjoAnuja/Bosco",
   "logo": "https://telegra.ph/file/f40d0ef77439f516c050f.jpg",
